# inverted-pendulum

./: .gitmodules  README.md
.circleci/: config.yml
designs/: controller_design.m  find_state_equations.py
designs/cad/: box.stl  dc-motor-lid.stl  dc-motor-mount.stl  electronics-case.stl  encoder-mount.stl  inverted-pendulum.FCStd  inverted-pendulum.FCStd1  magnet-holder.stl  motor-arm-connector.stl  motor-box.stl  motor-mount-table-screw.stl  pendulum-mount.stl  rotary-inverted-pendulum.FCStd  rotary-inverted-pendulum.FCStd1  stepper-connection.stl  stepper-mount.stl  stopper.stl
designs/cad/dc-motor/: 12v22rpm.SLDPRT  Getriebe-Motor 12V.STEP  User Library-eBay DC Geared Motor 6V 1000RPM.STEP
designs/cad/l298n/: H-Bridge_Mount.stl
designs/cad/motor-coupling/: Aluminum Alloy Flange Coupling, 4 mm SHAFT HOLE.STEP
inverted-pendulum-arduino/lib/L298N/: L298N.cpp  L298N.h
inverted-pendulum-arduino/lib/PIDController/: PIDController.cpp  PIDController.h
inverted-pendulum-arduino/src/: main.cpp
inverted-pendulum-pico/: CMakeLists.txt  Dockerfile  Makefile  main.c
inverted-pendulum-pico/scripts/: build.sh  install_build_deps.sh  install_dev_deps.sh  upload.sh
rotary-inverted-pendulum-pico/: CMakeLists.txt  Dockerfile  Makefile  main.c
rotary-inverted-pendulum-pico/lib/arm_encoder/: arm_encoder.c  arm_encoder.h
rotary-inverted-pendulum-pico/lib/motor_driver/: motor_driver.c  motor_driver.h
rotary-inverted-pendulum-pico/lib/motor_encoder/: motor_encoder.c  motor_encoder.h
rotary-inverted-pendulum-pico/lib/pid_controller/: pid_controller.c  pid_controller.h
rotary-inverted-pendulum-pico/scripts/: install_build_deps.sh  usb_output.sh
